--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Guessr! </title>
         <link href="./Resources/guess.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
