--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 
         <video autoplay muted loop id="my-video">
-            <source src="./Resources/Video/vid1.mp4" type="video/mp4">
+            <source src="https://drive.google.com/file/d/1NQRk23_aTr4r6rHpJ3sv-4YE782LfwbI/view?usp=sharing" type="video/mp4">
         </video>
 
         <audio autoplay muted id="error">
